--- a/portfolio/src/components/Layout/About/About.module.css
+++ b/portfolio/src/components/Layout/About/About.module.css
@@ -1,3 +1,13 @@
+.container {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .about {
   width: 100%;
   height: 100%;
