--- a/portfolio/src/components/Layout/About/Skills/Skills.module.css
+++ b/portfolio/src/components/Layout/About/Skills/Skills.module.css
@@ -62,7 +62,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .more .left .top .profile-image {
@@ -83,7 +83,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .more .left .middle > div {
@@ -102,7 +102,7 @@
   flex-direction: column;
   align-items: center;
 
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 /* RIGHT ABOUT */
