--- a/portfolio/src/components/UI/Button/Button/Button.module.css
+++ b/portfolio/src/components/UI/Button/Button/Button.module.css
@@ -10,7 +10,7 @@
   border: none;
   border-radius: 20px;
 
-  transition: all 0.4s ease-in-out;
+  transition: color 0.4s ease-in-out;
 
   cursor: pointer;
 }
