--- a/portfolio/src/components/Layout/About/Skills/Skills.module.css
+++ b/portfolio/src/components/Layout/About/Skills/Skills.module.css
@@ -1,8 +1,8 @@
 .more {
   color: white;
 
-  width: 50vw;
-  height: 80vh;
+  width: 50%;
+  height: 80%;
   background-color: #222222;
 
   padding: 15px;
