--- a/portfolio/src/components/Layout/Projects/Projects.module.css
+++ b/portfolio/src/components/Layout/Projects/Projects.module.css
@@ -1,18 +1,8 @@
-.project {
-  width: 500px;
-  height: 500px;
-  background-color: gray;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .projects-container {
-  width: 80%;
+  width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
