--- a/portfolio/src/components/UI/Settings/settings.module.css
+++ b/portfolio/src/components/UI/Settings/settings.module.css
@@ -10,32 +10,70 @@
   position: absolute;
   right: 0px;
 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 50px;
+  height: 50px;
   transition: right 0.5s ease-in-out;
   cursor: pointer;
+
+  background-color: #222222;
+  border: none;
+  color: white;
+
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.settings button span {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 100%;
+  animation: setAnim 3s infinite alternate;
+  z-index: 100;
+}
+
+@keyframes setAnim {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .settings button.active {
-  right: 100px;
+  right: 150px;
 }
 
 .settings .colors {
-  position: relative;
-  margin-top: 20px;
-  transform: translateX(150px);
+  position: absolute;
+  right: 150px;
+
+  width: 100%;
+  height: 100%;
+
+  /* transform: translateX(150px); */
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  background-color: green;
+  background-color: #222222;
 
-  transition: transform 0.5s ease-in-out;
+  border-bottom-left-radius: 5px;
+  transition: right 0.5s ease-in-out;
 }
 
 .settings .colors.active {
-  transform: translateX(0px);
+  right: 0px;
+  /* transform: translateX(150px); */
 }
 
 .settings .color {
