--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -17,8 +17,19 @@ code {
 }
 
 html {
+  width: 100vw;
+  height: 100vh;
   font-family: 'Noto Sans JP', sans-serif;
-  background-color: #000;
+
+  background-image: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ),
+    url('./assets/bg_1.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 main {
@@ -28,4 +39,8 @@ main {
   width: 100vw;
   height: calc(100vh - 60px);
   z-index: 1;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
