--- a/portfolio/src/components/Layout/About/Skills/Skills.module.css
+++ b/portfolio/src/components/Layout/About/Skills/Skills.module.css
@@ -1,13 +1,13 @@
 .more {
+  position: relative;
+  display: flex;
   color: white;
 
   width: 50%;
   height: 80%;
   background-color: #222222;
 
-  padding: 15px;
-
-  overflow-y: scroll;
+  padding: 20px;
 
   border-radius: 20px;
 }
@@ -33,76 +33,36 @@
   float: left;
 }
 
-.more .right {
+.more .right-scroll {
   position: relative;
   width: 70%;
   min-height: 100%;
   float: right;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.more .right-scroll::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.more .right-scroll {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.more .right {
+  width: 100%;
+  min-height: 100%;
 }
 
 .btn {
   position: absolute;
-  top: 5px;
-  right: -15px;
-}
-
-/* LEFT TOP */
-
-.more .left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border-right: 1px solid grey;
-}
-
-.more .left .top {
-  width: 90%;
-  height: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.more .left .top .profile-image {
-  width: 150px;
-  height: 150px;
-}
-
-.more .left .top .profile-image img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-}
-
-/* LEFT MIDDLE */
-.more .left .middle {
-  width: 90%;
-  height: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-}
-
-.more .left .middle > div {
-  width: 100%;
-  margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid grey;
-}
-
-/* LEFT BOTTOM */
-
-.more .left .bottom {
-  width: 90%;
-  height: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  justify-content: flex-start;
+  top: 0px;
+  right: -60px;
 }
 
 /* RIGHT ABOUT */
