--- a/portfolio/src/components/UI/Slide/Slide.module.css
+++ b/portfolio/src/components/UI/Slide/Slide.module.css
@@ -1,9 +1,9 @@
 .slide {
+  position: relative;
   width: 600px;
   height: 600px;
   padding: 5px;
 
-  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -17,11 +17,24 @@
 }
 
 .slide .image {
+  width: inherit;
+  height: inherit;
+
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  overflow: hidden;
+}
+
+.slide .image img {
+  width: calc(600px - 10px);
+  height: calc(600px - 10px);
+  object-fit: cover;
+
+  filter: blur(1px);
 }
 
 .slide .image p {
@@ -29,4 +42,14 @@
   bottom: 0;
 
   color: #fff;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 10px;
+
+  font-size: 20px;
+  font-family: 'Courier New', Courier, monospace;
+  font-weight: bold;
+
+  border-radius: 10px;
+
+  cursor: pointer;
 }
