--- a/portfolio/src/components/Header/Header.module.css
+++ b/portfolio/src/components/Header/Header.module.css
@@ -6,7 +6,7 @@
   width: 100vw;
   height: 60px;
 
-  background-color: #000;
+  background-color: transparent;
 
   display: flex;
   flex-direction: row;
