--- a/portfolio/src/components/Header/Nav/Nav.module.css
+++ b/portfolio/src/components/Header/Nav/Nav.module.css
@@ -5,16 +5,26 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
+  z-index: 10;
 }
 
 .logo {
-  width: 50px;
-  height: 50px;
+  width: auto;
+  height: auto;
 }
 
 .logo img {
   width: 100%;
   height: 100%;
+}
+
+.logo h1 {
+  color: #fff;
+  font-size: 30px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-transform: uppercase;
+
+  cursor: pointer;
 }
 
 .nav button span[class^='active'] {
