--- a/portfolio/src/components/Layout/Home/Home.module.css
+++ b/portfolio/src/components/Layout/Home/Home.module.css
@@ -28,3 +28,10 @@
 
   margin: 20px;
 }
+
+.home cite {
+  font-size: 15px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  margin: 20px;
+}
