--- a/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
+++ b/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
@@ -1,23 +1,32 @@
+@import '../../../website-info/colors.css';
+
 .button {
-  width: 70px;
-  height: 30px;
+  position: relative;
+  width: 100px;
+  height: 40px;
 
   margin: 0px 7px;
 
-  background-color: transparent;
+  background-color: var(--color2);
   color: white;
   font-size: 17px;
   font-weight: 700;
 
   border: none;
+  border-radius: 15px;
 
   cursor: pointer;
 }
 
+.button:hover span[style],
+.button:active span[style] {
+  color: var(--color3) !important;
+}
+
 .button:hover,
 .button:active {
-  color: rgb(255, 0, 0);
-  font-weight: 500;
+  box-shadow: 0 1px 1px rgba(255, 30, 86, 0.2), 0 2px 2px rgba(255, 30, 86, 0.2),
+    0 4px 4px rgba(255, 30, 86, 0.2);
 }
 
 .button:focus {
