--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -21,24 +21,17 @@ html {
   height: 100vh;
   font-family: 'Noto Sans JP', sans-serif;
 
-  background-image: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.5),
-      rgba(0, 0, 0, 0.5)
-    ),
-    url('./assets/bg_1.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background: var(--color0);
 }
 
 main {
   position: fixed;
-  bottom: 0;
+  top: 0;
   left: 0;
   width: 100vw;
-  height: calc(100vh - 60px);
-  z-index: 1;
+  height: 100vh;
+  /* height: calc(100vh - 60px); */
+  z-index: 0;
 
   display: flex;
   align-items: center;
