--- a/portfolio/src/components/Layout/Home/Home.module.css
+++ b/portfolio/src/components/Layout/Home/Home.module.css
@@ -34,4 +34,9 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
   margin: 20px;
+
+  width: 600px;
+  height: auto;
+
+  text-indent: 70px;
 }
