--- a/portfolio/src/components/UI/Settings/settings.module.css
+++ b/portfolio/src/components/UI/Settings/settings.module.css
@@ -1,14 +1,23 @@
 .settings {
   position: absolute;
-  right: 0;
+  right: -150px;
   top: 100px;
   width: 150px;
   height: 200px;
+  z-index: 100;
+
+  transition: right 0.5s ease-in-out;
+
+  background-color: #222222;
+}
+
+.settings.active {
+  right: 0;
 }
 
 .settings button {
   position: absolute;
-  right: 0px;
+  left: -50px;
 
   display: flex;
   align-items: center;
@@ -16,7 +25,6 @@
 
   width: 50px;
   height: 50px;
-  transition: right 0.5s ease-in-out;
   cursor: pointer;
 
   background-color: #222222;
@@ -47,18 +55,12 @@
   }
 }
 
-.settings button.active {
-  right: 150px;
-}
-
 .settings .colors {
   position: absolute;
-  right: 150px;
+  left: 0;
 
   width: 100%;
   height: 100%;
-
-  /* transform: translateX(150px); */
 
   display: flex;
   flex-direction: row;
@@ -68,12 +70,6 @@
   background-color: #222222;
 
   border-bottom-left-radius: 5px;
-  transition: right 0.5s ease-in-out;
-}
-
-.settings .colors.active {
-  right: 0px;
-  /* transform: translateX(150px); */
 }
 
 .settings .color {
