--- a/portfolio/src/components/Layout/About/Skills/BasicInfo.module.css
+++ b/portfolio/src/components/Layout/About/Skills/BasicInfo.module.css
@@ -13,7 +13,7 @@
 
 .left .top {
   width: 90%;
-  height: 40%;
+  height: 30%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,10 +31,20 @@
   border-radius: 50%;
 }
 
+.left .top .name {
+  font-size: 20px;
+  font-weight: bolder;
+}
+
+.left .top .job {
+  font-size: 15px;
+  font-weight: bolder;
+}
+
 /* LEFT MIDDLE */
 .left .middle {
   width: 90%;
-  height: 40%;
+  height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,19 +53,44 @@
 
 .left .middle > div {
   width: 100%;
+  height: 50px;
   margin-bottom: 20px;
-  padding-bottom: 10px;
-  border-bottom: 1px solid grey;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.left .middle > div > .icon {
+  margin: 0px 20px 0px 0px;
+  width: 30px;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.left .middle > div > .text {
+  width: auto;
+  height: 30px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  padding: 10px;
 }
 
 /* LEFT BOTTOM */
 
 .left .bottom {
   width: 90%;
-  height: 40%;
+  height: 20%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  justify-content: flex-start;
+  justify-content: center;
 }
