--- a/portfolio/src/components/Layout/Contact/Contact.module.css
+++ b/portfolio/src/components/Layout/Contact/Contact.module.css
@@ -1,7 +1,7 @@
 .contact {
   width: 50%;
   height: 80%;
-  background-color: #222222;
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 20px;
 }
 
