--- a/portfolio/src/components/UI/Settings/settings.module.css
+++ b/portfolio/src/components/UI/Settings/settings.module.css
@@ -3,7 +3,7 @@
   right: -150px;
   top: 100px;
   width: 150px;
-  height: 200px;
+  height: 250px;
   z-index: 100;
 
   transition: right 0.5s ease-in-out;
@@ -60,7 +60,7 @@
   left: 0;
 
   width: 100%;
-  height: 100%;
+  height: 200px;
 
   display: flex;
   flex-direction: row;
@@ -78,6 +78,32 @@
 
   background-color: white;
   margin: 10px;
+
+  cursor: pointer;
+}
+
+.settings .languages {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+
+  width: 100%;
+  height: 50px;
+
+  color: #fff;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.settings .languages > div {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+
+  font-size: 20px;
 
   cursor: pointer;
 }
