worked on cotact page, nav and socials

--- a/portfolio/src/components/Header/Nav/Nav.module.css
+++ b/portfolio/src/components/Header/Nav/Nav.module.css
@@ -8,6 +8,15 @@
   z-index: 10;
 }
 
+.nav .pages {
+  width: 400px;
+  height: auto;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+
 .logo {
   width: auto;
   height: auto;
