--- a/portfolio/src/components/Layout/Contact/Contact.module.css
+++ b/portfolio/src/components/Layout/Contact/Contact.module.css
@@ -1,8 +1,10 @@
 .contact {
-  width: 50%;
+  width: 50vw;
   height: 80%;
   background-color: rgba(0, 0, 0, 0.2);
   padding: 20px;
+
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .contact .about {
