--- a/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
+++ b/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
@@ -2,31 +2,29 @@
 
 .button {
   position: relative;
-  width: 100px;
+  width: 40px;
   height: 40px;
 
   margin: 0px 7px;
 
-  background-color: var(--color2);
-  color: white;
-  font-size: 17px;
-  font-weight: 700;
+  background-color: #fff;
+  color: #000;
+  font-size: 20px;
 
   border: none;
-  border-radius: 15px;
+  border-radius: 20px;
 
   cursor: pointer;
+
+  font-family: sans-serif;
+  font-weight: bold;
+
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
 
 .button:hover span[style],
 .button:active span[style] {
   color: var(--color3) !important;
-}
-
-.button:hover,
-.button:active {
-  box-shadow: 0 1px 1px rgba(255, 30, 86, 0.2), 0 2px 2px rgba(255, 30, 86, 0.2),
-    0 4px 4px rgba(255, 30, 86, 0.2);
 }
 
 .button:focus {
