--- a/portfolio/src/components/UI/Input/Input.module.css
+++ b/portfolio/src/components/UI/Input/Input.module.css
@@ -1,6 +1,8 @@
 .form-container {
+  position: relative;
   width: 100%;
   height: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,8 +10,22 @@
 }
 
 .form-container .top-info {
-  width: 70%;
-  height: 10%;
+  position: relative;
+  width: 80%;
+  height: 5%;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.form-container .top-info .name,
+.form-container .top-info .email {
+  position: relative;
+  width: 48%;
+  height: 100%;
+
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -17,10 +33,11 @@
 }
 
 .form-container .top-info input {
-  margin: 10px;
-  width: 250px;
-  height: 40px;
+  position: relative;
+  width: 100%;
+  height: inherit;
   background-color: rgba(0, 0, 0, 0.5);
+
   outline: none;
   border: none;
 
@@ -30,17 +47,22 @@
 }
 
 .form-container .message {
-  width: 70%;
+  position: relative;
+  width: 80%;
   height: 200px;
+
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  margin: 20px 0px;
 }
 
 .form-container .message textarea {
-  width: 520px;
-  height: 200px;
+  position: relative;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   outline: none;
   border: none;
@@ -49,4 +71,6 @@
 
   padding: 20px;
   color: #fff;
+
+  resize: none;
 }
