--- a/portfolio/src/components/UI/Carousel/Carousel.module.css
+++ b/portfolio/src/components/UI/Carousel/Carousel.module.css
@@ -55,10 +55,10 @@
 .carouselContainer .leftBtn {
   position: relative;
 
-  width: 100px;
-  height: 100%;
+  width: 50px;
+  aspect-ratio: 1/1;
 
-  background-color: rgba(0, 0, 0, 0.4);
+  border-radius: 25px;
 
   transition: transform 0.25s ease-in-out;
 }
@@ -67,10 +67,8 @@
   position: relative;
   margin-right: 0px;
 
-  width: 100px;
-  height: 100%;
-
-  background-color: rgba(0, 0, 0, 0.4);
+  width: 60px;
+  height: 60px;
 
   transition: transform 0.25s ease-in-out;
 }
@@ -83,6 +81,13 @@
   border: none;
 
   cursor: pointer;
+
+  font-size: 50px;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .carouselContainer .leftBtn:hover,
