--- a/portfolio/src/components/Layout/Home/Home.module.css
+++ b/portfolio/src/components/Layout/Home/Home.module.css
@@ -150,4 +150,11 @@
   justify-content: center;
 
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+
+  cursor: pointer;
+}
+
+.homeContainer footer .social ul li:hover,
+.homeContainer footer .social ul li:active {
+  color: var(--color3);
 }
