--- a/portfolio/src/components/Header/Nav/Nav.module.css
+++ b/portfolio/src/components/Header/Nav/Nav.module.css
@@ -38,11 +38,21 @@
   cursor: pointer;
 }
 
-.active {
-  color: #f00;
+.nav .pages a {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  color: black;
+  width: 100%;
+  height: 100%;
+
+  border-radius: 20px;
 }
 
-.nav a {
-  color: #000;
-  text-decoration: none;
+.nav .pages a:active,
+.nav .pages a:hover,
+.nav .pages a.active {
+  color: #f00;
 }
