--- a/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
+++ b/portfolio/src/components/UI/Button/ButtonAsLink/ButtonAsLink.module.css
@@ -2,29 +2,25 @@
 
 .button {
   position: relative;
-  width: 40px;
-  height: 40px;
+  width: 2em;
+  height: 2em;
 
-  margin: 0px 7px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
   background-color: #fff;
-  color: #000;
+
   font-size: 20px;
+  padding: 0;
+  margin: 0;
 
   border: none;
-  border-radius: 20px;
+  border-radius: 1em;
 
   cursor: pointer;
 
-  font-family: sans-serif;
-  font-weight: bold;
-
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-}
-
-.button:hover span[style],
-.button:active span[style] {
-  color: var(--color3) !important;
 }
 
 .button:focus {
