--- a/portfolio/src/components/UI/Settings/settings.module.css
+++ b/portfolio/src/components/UI/Settings/settings.module.css
@@ -1,14 +1,20 @@
 .settings {
   position: absolute;
-  right: -150px;
+  right: -250px;
   top: 100px;
-  width: 150px;
-  height: 250px;
+  width: 250px;
+  height: 50px;
   z-index: 100;
 
   transition: right 0.5s ease-in-out;
 
   background-color: #222222;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  /* justify-content: space-between; */
 }
 
 .settings.active {
@@ -31,8 +37,8 @@
   border: none;
   color: white;
 
-  border-top-left-radius: 5px;
-  border-bottom-left-radius: 5px;
+  border-top-left-radius: 25px;
+  border-bottom-left-radius: 25px;
 }
 
 .settings button span {
@@ -59,15 +65,14 @@
   position: absolute;
   left: 0;
 
-  width: 100%;
-  height: 200px;
+  width: 70%;
+  height: 100%;
 
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  background-color: #222222;
 
   border-bottom-left-radius: 5px;
 }
@@ -77,20 +82,23 @@
   height: 30px;
 
   background-color: white;
-  margin: 10px;
+  margin: 5px;
+
+  border: 2px solid #fff;
+  border-radius: 15px;
 
   cursor: pointer;
 }
 
 .settings .languages {
   position: absolute;
-  bottom: 0;
-  left: 0;
+  right: 0;
 
-  width: 100%;
-  height: 50px;
+  width: 30%;
+  height: 40px;
 
   color: #fff;
+  border-left: 1px solid #fff;
 
   display: flex;
   flex-direction: row;
@@ -101,7 +109,11 @@
 .settings .languages > div {
   width: 40px;
   height: 40px;
-  text-align: center;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
   font-size: 20px;
 
