--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -37,3 +37,11 @@ main {
   align-items: center;
   justify-content: center;
 }
+
+.centered {
+  margin: 3rem auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
