--- a/portfolio/src/components/Layout/About/Skills/Comps/WorkComp.module.css
+++ b/portfolio/src/components/Layout/About/Skills/Comps/WorkComp.module.css
@@ -1,5 +1,7 @@
+@import url('../../../../website-info/colors/colors.css');
+
 .firstRow {
-  color: #fff;
+  color: var(--white);
   font-size: 15px;
 }
 
@@ -9,7 +11,7 @@
 }
 
 .secondRow {
-  color: #fff;
+  color: var(--white);
 
   display: flex;
   flex-direction: row;
@@ -20,11 +22,11 @@
 
 .secondRow span {
   font-weight: bolder;
-  color: #fff;
+  color: var(--white);
 }
 
 .thirdRow {
-  color: #fff;
+  color: var(--white);
 }
 
 .thirdRow > div {
