--- a/portfolio/src/components/Header/Nav/Nav.module.css
+++ b/portfolio/src/components/Header/Nav/Nav.module.css
@@ -1,3 +1,5 @@
+@import url('../../website-info/colors/colors.css');
+
 .nav {
   width: 100%;
   height: 100%;
@@ -30,7 +32,7 @@
 }
 
 .logo h1 {
-  color: #fff;
+  color: var(--white);
   font-size: 30px;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   text-transform: uppercase;
@@ -44,7 +46,7 @@
   align-items: center;
   justify-content: center;
 
-  color: black;
+  color: var(--black);
   width: 100%;
   height: 100%;
 
@@ -54,5 +56,5 @@
 .nav .pages a:active,
 .nav .pages a:hover,
 .nav .pages a.active {
-  color: #f00;
+  color: var(--red);
 }
