--- a/portfolio/src/components/Layout/About/About.module.css
+++ b/portfolio/src/components/Layout/About/About.module.css
@@ -1,8 +1,9 @@
-@import '../../website-info/colors.css';
+@import url('../../website-info/colors/colors.css');
+@import url('https://fonts.googleapis.com/css2?family=Cabin&display=swap');
 
 .container {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   display: flex;
   flex-direction: row;
@@ -15,17 +16,17 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  color: #fff;
-  background-color: rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.15);
+  color: var(--white);
+  background-color: var(--black-alpha-20);
+  box-shadow: 0px 5px 20px var(--black-alpha-15);
 }
 
 .about .profile-image {
   width: 400px;
   height: 400px;
   margin: 20px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px,
-    rgba(0, 0, 0, 0.05) 0px 5px 10px;
+  box-shadow: var(--black-alpha-15) 0px 15px 25px,
+    var(--black-alpha-15) 0px 5px 10px;
 }
 
 .about .profile-image img {
@@ -52,7 +53,7 @@
   font-size: 40px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  color: #fff;
+  color: var(--white);
 }
 
 .about .profile .job {
@@ -60,7 +61,7 @@
   font-size: 20px;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: bold;
-  color: #fff;
+  color: var(--white);
 }
 
 .about .profile span {
@@ -70,7 +71,9 @@
 .about .profile .description {
   text-indent: 50px;
   font-size: 20px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  line-height: 27px;
+  /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+  font-family: 'Cabin', sans-serif;
   font-weight: 400;
-  color: #fff;
+  color: var(--white);
 }
