--- a/portfolio/src/components/Layout/About/Skills/BasicInfo.module.css
+++ b/portfolio/src/components/Layout/About/Skills/BasicInfo.module.css
@@ -1,3 +1,4 @@
+@import url('../../../website-info/colors/colors.css');
 /* LEFT TOP */
 
 .left {
@@ -7,8 +8,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  border-right: 1px solid grey;
-  color: #fff;
+  border-right: 1px solid var(--grey);
+  color: var(--white);
 }
 
 .left .top {
