--- a/portfolio/src/components/Layout/Projects/Projects.module.css
+++ b/portfolio/src/components/Layout/Projects/Projects.module.css
@@ -6,3 +6,16 @@
   align-items: center;
   justify-content: center;
 }
+
+.projects-container > a {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+}
+
+.snap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: ce;
+}
