--- a/portfolio/src/components/UI/LoadingSpinner/LoadingSpinner.module.css
+++ b/portfolio/src/components/UI/LoadingSpinner/LoadingSpinner.module.css
@@ -1,7 +1,13 @@
 .spinner {
   display: inline-block;
-  width: 80px;
-  height: 80px;
+  width: 150px;
+  height: 150px;
+
+  margin: 5rem auto;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .spinner:after {
   content: ' ';
