--- a/portfolio/src/components/Layout/About/About.module.css
+++ b/portfolio/src/components/Layout/About/About.module.css
@@ -17,16 +17,15 @@
   align-items: center;
   justify-content: center;
   color: var(--white);
-  background-color: var(--black-alpha-20);
-  box-shadow: 0px 5px 20px var(--black-alpha-15);
+  background-image: var(--linear-gradient-bg-0);
+  box-shadow: var(--box-shadow-1);
 }
 
 .about .profile-image {
   width: 400px;
   height: 400px;
   margin: 20px;
-  box-shadow: var(--black-alpha-15) 0px 15px 25px,
-    var(--black-alpha-15) 0px 5px 10px;
+  box-shadow: var(--box-shadow-2);
 }
 
 .about .profile-image img {
