--- a/portfolio/src/components/Layout/Home/Home.module.css
+++ b/portfolio/src/components/Layout/Home/Home.module.css
@@ -22,25 +22,10 @@
   justify-content: center;
 
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.1);
 
-  /* background-image: linear-gradient(
-    to right top,
-    #ff1e56,
-    #d72a6d,
-    #a93875,
-    #7b3e6f,
-    #533d5b,
-    #59415c,
-    #5e455d,
-    #634a5f,
-    #975870,
-    #cb686d,
-    #f0835b,
-    #ffac41
-  ); */
+  background-image: var(--linear-gradient-bg-0);
 
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow-1);
 }
 
 .homeContainer .home .left {
@@ -67,6 +52,7 @@
 .homeContainer .home .right img {
   aspect-ratio: 1/1;
   height: 100%;
+  box-shadow: var(--box-shadow-2);
 }
 
 .homeContainer .home .left .hello {
